<resources>
    <string name="app_name">Voice To Text App</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_type">User Type</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="user_signed_in">User Signed In :</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="tamil">Tamil</string>
    <string name="sinhala">Sinhala</string>
    <string name="english">English</string>
    <string name="priot_prompt">Select Choice</string>
    <string-array name="priot_choice">
        <item>Select Priority</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="image_1">Image_1</string>
    <string name="image_user_1">Image_user_1</string>
    <string name="current_user">Current User</string>
    <string name="සිංහල">සිංහල</string>
    <string name="தமிழ்">தமிழ்</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="prioritization">Prioritization:</string>
    <string name="notice">Notice:</string>
    <string name="microphone_icon">Microphone_icon</string>
    <string name="to_whom">To Whom:</string>
    <string name="from">From:</string>
    <string name="sent_date">Sent Date:</string>
    <string name="current_date">Current Date</string>
    <string name="sent_time">Sent Time:</string>
    <string name="current_time">Current Time</string>
    <string name="send">Send</string>
    <string name="දිනය">දිනය:</string>
    <string name="වේලාව">වේලාව:</string>
    <string name="ස්ථානය">ස්ථානය:</string>
    <string name="දැන්වීම">දැන්වීම:</string>
    <string name="කවුරුවෙතද">කවුරු වෙතද:</string>
    <string name="කවුරුවිසින්ද">කවුරු විසින්ද:</string>
    <string name="යවනදිනය">යවන දිනය:</string>
    <string name="යවනවේලාව">යවන වේලාව:</string>
    <string name="යවන්න">යවන්න</string>
    <string name="ඉවත්වන්න">ඉවත් වන්න</string>
    <string name="image_5">image_5</string>
    <string name="input_voice_notice">Input voice notice</string>
    <string name="தேதி">தேதி:</string>
    <string name="நேரம்">நேரம்:</string>
    <string name="இடம்">இடம்:</string>
    <string name="முன்னுரிமை">முன்னுரிமை</string>
    <string name="அறிவிப்பு">அறிவிப்பு:</string>
    <string name="யாருக்கு">யாருக்கு:</string>
    <string name="இருந்து">இருந்து:</string>
    <string name="அனுப்பியதேதி">அனுப்பிய தேதி:</string>
    <string name="நேரம்அனுப்பியது">நேரம் அனுப்பியது:</string>
    <string name="அனுப்பு">அனுப்பு</string>
    <string name="வெளியேறு">வெளியேறு</string>
    <string name="type_the_user_group_name_here">Type the User Group Name Here</string>
    <string name="create_group">Create Group</string>
    <string name="employee_id_2">Employee Id</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_mobile_number">Employee Mobile Number</string>
    <string name="assign">Assign</string>
    <string name="remove">Remove</string>
    <string name="exit">Exit</string>
    <string name="already_have_account_sign_in">Already Have Account? Sign In</string>
    <string name="image_user_2">Image_user_2</string>
    <string name="txtEmpID">Image_user_2</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="create_user_groups_amp_assign_employees">Assign Employees</string>
    <string name="current_user_type">Current User Type</string>
    <string name="cur_user_type">Cur. User Type</string>
    <string name="priority">Priority:</string>
    <string name="create_groups_assign_emp_s">Create Groups / Assign Emp.s</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="remove_employees">Remove Employees</string>
    <string name="load">Load</string>
    <string name="dash">  -  </string>
    <string name="update">Update</string>
    <string name="update_employee">Update Employee</string>
    <string name="user_group_name">User Group Name</string>
    <string name="update_employees">Update Employees</string>
    <string name="employee_id_will_appear_here">Employee ID will Appear Here</string>
    <string name="update_employee_mobile_number">Update Employee Mobile Number</string>
    <string name="welcome_office">Welcome Office</string>
    <string name="voice_to_text_app">Voice To Text App</string>
    <string name="add_new_employees">Add New Employees</string>
    <string name="assign_employees">Assign Employees</string>
    <string name="employee_nic">Employee NIC</string>
    <string name="add">Add</string>
    <string name="create_user_groups">Create User Groups</string>
    <string name="sin_pr">ප්‍රමුඛතාවය</string>
</resources>