<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    tools:context=".AdminPage">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_5"
        app:srcCompat="@mipmap/admin2" />

    <Button
        android:id="@+id/btn_create_grup_pg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/create_user_groups"
        android:textSize="18sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_create_grup_pg"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btn_add_emp_pg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_create_grup_pg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/add_new_employees"
        android:textSize="18sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_add_emp_pg"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btn_asign_emp_pg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add_emp_pg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/assign_employees"
        android:textSize="18sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_asign_emp_pg"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btn_update_pg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_asign_emp_pg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/update_employee"
        android:textSize="18sp" />
    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_update_pg"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btn_remove_pg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_update_pg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/remove_employee"
        android:textSize="18sp" />
    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_remove_pg"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btn_notice_pg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_remove_pg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/input_voice_notice"
        android:textSize="18sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_notice_pg"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_notice_pg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:textColor="@android:color/background_light"
        android:text="@string/exit"
        android:textSize="18sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="5px"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btn_exit"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"/>

    <TextView
        android:id="@+id/txtCurrentUserAdmin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btn_exit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtCurrentUserType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txtCurrentUserAdmin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />
</RelativeLayout>